<resources>
    <string name="app_name">MyViewPager</string>
    <string name="app_name1">第一个页面</string>
    <string name="app_name2">第二个页面</string>
    <string name="app_name3">第三个页面</string>
    <string name="app_name4">第四个页面</string>
    <string name="login">登录</string>
    <string name="name1">第一</string>
    <string name="name2">第二</string>
    <string name="name3">第三</string>
    <string name="name4">第四</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">正在加载中...</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>

    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="error_system">服务器出错</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或者密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络连接超时</string>
    <string name="error_socket_unreachable">网络不可用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="cloth_shibie">商品自动识别，请稍后</string>
    <string name="cloth_shibiet">Automatic identification of goods, please later</string>
    <string name="cloth_yaodong">请摇动商品</string>
    <string name="cloth_bumai">不买的商品请放回原位  Please put the goods you do not buy back in place</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>
