<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colth_bottom">

    <LinearLayout
        android:layout_above="@id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/store"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/cloth_shibie"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloth_shibiet"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloth_yaodong"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:weightSum="3">

            <Button
                android:id="@+id/tv_open"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:background="@drawable/colth_button"
                android:text="开门"
                android:textSize="50dp"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_jiantou"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingTop="100dp"
                android:background="@drawable/colth_button"
                android:gravity="center"
                android:textSize="50dp"
                android:drawableTop="@mipmap/jiantou"
                android:text="未购物请点击上方开门按钮"
                android:textColor="@color/white"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/cloth_bumai"
        />


</RelativeLayout>
