<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.yjw.myviewpager.MainActivity">

   <RelativeLayout
       android:id="@+id/main_title"
       android:layout_width="match_parent"
       android:layout_height="48dp">

       <include layout="@layout/title"
           />

   </RelativeLayout>

   <RelativeLayout
       android:id="@+id/ly_top_bar"
       android:layout_below="@+id/main_title"
       android:layout_width="match_parent"
       android:layout_height="48dp"
       >

       <TextView
           android:id="@+id/txt_topbar"
           android:layout_centerInParent="true"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:text="提醒"
           android:textSize="18sp"
           android:textColor="@color/yellow"/>
       
       <View
           android:layout_width="match_parent"
           android:layout_height="2px"
           android:layout_alignParentBottom="true"
           android:background="@color/white"
           />
   </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_channel"
            android:drawableTop="@drawable/tab_menu_better"
            android:gravity="center"
            android:button="@null"
            style="@style/tab_menu_text"
            android:text="@string/name1"
            />
        <RadioButton
            android:id="@+id/rb_message"
            android:drawableTop="@drawable/tab_menu_better"
            android:gravity="center"
            android:button="@null"
            style="@style/tab_menu_text"
            android:text="@string/name2"
            />
        <RadioButton
            android:id="@+id/rb_better"
            android:gravity="center"
            android:drawableTop="@drawable/tab_menu_better"
            android:button="@null"
            style="@style/tab_menu_text"
            android:text="@string/name3"/>
        <RadioButton
            android:id="@+id/rb_setting"
            android:drawableTop="@drawable/tab_menu_better"
            android:gravity="center"
            android:button="@null"
            style="@style/tab_menu_text"
            android:text="@string/name4"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:id="@+id/div_tab_bar"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/white"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@+id/ly_top_bar">

    </android.support.v4.view.ViewPager>
</RelativeLayout>
